--- a/css/unite-berserk_style.css
+++ b/css/unite-berserk_style.css
@@ -1,6 +1,8 @@
 body {
   background-color: rgb(53, 53, 53);
   font-family: "Oswald", sans-serif;
+  font-size: 20px;
+  color: white;
   margin: 0;
 }
 
@@ -11,7 +13,7 @@ body {
 /* Fixed sidenav, full height */
 .sidenav {
   height: 100%;
-  width: 10%;
+  width: 13%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -20,6 +22,7 @@ body {
   overflow-x: hidden;
   padding-top: 20px;
   resize: none;
+  text-align: center;
 }
 
 /* Style the sidenav links and the dropdown button */
@@ -36,6 +39,7 @@ body {
   text-align: left;
   cursor: pointer;
   outline: none;
+  text-align: center;
 }
 
 /* On mouse-over */
@@ -97,6 +101,10 @@ div {
 }
 
 textarea {
+  resize: none;
+}
+
+div {
   resize: none;
 }
 
@@ -163,4 +171,75 @@ textarea {
 
   /* Support for IE. */
   font-feature-settings: "liga";
+}
+
+.wrap {
+  margin: 4%;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 10px;
+}
+.box {
+  float: left;
+  position: relative;
+  width: 25%;
+  padding-bottom: 10%;
+  padding: 1%;
+
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.boxInner {
+  border: solid 2px black;
+  left: 2%;
+  right: 2%;
+  top: 2%;
+  bottom: 2%;
+  margin: auto;
+  vertical-align: middle;
+}
+.boxInner img {
+  width: 100%;
+}
+
+@media only screen and (max-width: 480px) {
+  /* Smartphone view: 1 tile */
+  .box {
+    width: 100%;
+    padding-bottom: 100%;
+  }
+}
+@media only screen and (max-width: 650px) and (min-width: 481px) {
+  /* Tablet view: 2 tiles */
+  .box {
+    width: 50%;
+    padding-bottom: 50%;
+  }
+}
+@media only screen and (max-width: 1050px) and (min-width: 651px) {
+  /* Small desktop / ipad view: 3 tiles */
+  .box {
+    width: 33.3%;
+    padding-bottom: 33.3%;
+  }
+}
+@media only screen and (max-width: 1290px) and (min-width: 1051px) {
+  /* Medium desktop: 4 tiles */
+  .box {
+    width: 25%;
+    padding-bottom: 25%;
+  }
+}
+
+div.desc {
+  position: relative;
+  border-top: 2px solid black;
+  padding: 2%;
+  height: 8%;
+  text-align: center;
+  vertical-align: middle;
+  overflow: hidden;
 }
